tests/cases/positive/comments.lang
// hello

(
  // hello
  1
)

fn() -> unit {
  ()
  // hello
}

if (false) {
  // hello
  ()
}

// hello
