tests/cases/negative/missing_return.lang
// this is valid
fn() -> i32 { return 1 }

// this is also valid (implicit return)
fn() -> i32 { 1 }

// this is invalid (must end with a return)
fn() -> unit { }
